--- a/pages/product-details.html
+++ b/pages/product-details.html
@@ -39,19 +39,19 @@
 
       <label for="size">Size:</label>
       <select id="size">
-        <option value="6">6 UK – 39 1/3 EU – Available</option>
-        <option value="6.5">6.5 UK – 40 EU – Available</option>
-        <option value="7">7 UK – 40 2/3 EU – Not available right now</option>
-        <option value="7.5">7.5 UK – 41 1/3 EU – Available</option>
-        <option value="8">8 UK – 42 EU – Available</option>
-        <option value="8.5">8.5 UK – 42 2/3 EU – Available</option>
-        <option value="9">9 UK – 43 1/3 EU – Available</option>
-        <option value="9.5">9.5 UK – 44 EU – Available</option>
-        <option value="10">10 UK – 44 2/3 EU – Available</option>
-        <option value="10.5">10.5 UK – 45 1/3 EU – Available</option>
-        <option value="11">11 UK – 46 EU – Available</option>
-        <option value="11.5">11.5 UK – 46 2/3 EU – Available</option>
-        <option value="12">12 UK – 47 1/3 EU – Available</option>
+        <option value="6 UK">6 UK – 39 1/3 EU – Available</option>
+        <option value="6.5 UK">6.5 UK – 40 EU – Available</option>
+        <option value="7 UK">7 UK – 40 2/3 EU – Not available right now</option>
+        <option value="7.5 UK">7.5 UK – 41 1/3 EU – Available</option>
+        <option value="8 UK">8 UK – 42 EU – Available</option>
+        <option value="8.5 UK">8.5 UK – 42 2/3 EU – Available</option>
+        <option value="9 UK">9 UK – 43 1/3 EU – Available</option>
+        <option value="9.5 UK">9.5 UK – 44 EU – Available</option>
+        <option value="10 UK">10 UK – 44 2/3 EU – Available</option>
+        <option value="10.5 UK">10.5 UK – 45 1/3 EU – Available</option>
+        <option value="11 UK">11 UK – 46 EU – Available</option>
+        <option value="11.5 UK">11.5 UK – 46 2/3 EU – Available</option>
+        <option value="12 UK">12 UK – 47 1/3 EU – Available</option>
       </select>
 
       <label for="quantity">Quantity:</label>
@@ -61,7 +61,7 @@
         <button onclick="changeQuantity(1)">+</button>
       </div>
 
-      <button class="add-to-cart-btn">Add to Cart</button>
+      <button class="add-to-cart-btn" onclick="handleAddToCart()">Add to Cart</button>
     </div>
   </main>
 
@@ -90,5 +90,36 @@
 
   <script src="../assets/js/script.js"></script>
   <script src="../assets/js/product-details.js"></script>
+
+  <!-- Cart Side Panel -->
+  <div id="cart-panel" class="cart-panel hidden">
+    <div class="cart-header">
+      <h3><a href="cart.html">Item added to the cart →</a></h3>
+      <button class="close-btn" onclick="closeCartPanel()">×</button>
+  </div>
+
+  <div class="cart-item">
+    <img id="cart-thumb" src="" alt="Product thumbnail">
+    <div class="cart-item-info">
+      <p class="cart-product-name" id="cart-name">Product Name</p>
+      <p class="cart-subinfo">
+        <span id="cart-size">Size: —</span> |
+        <span>No customization</span>
+      </p>
+      <p class="cart-product-price"><span id="cart-price">— €</span> ×1</p>
+    </div>
+    <button class="remove-item-btn" title="Remove">🗑️</button>
+  </div>
+  
+
+  <div class="suggested">
+    <h4>Suggested Items</h4>
+    <!-- Placeholder for future content -->
+    <div class="suggested-items">Coming soon...</div>
+  </div>
+
+  <a href="cart.html" class="view-cart-btn">View Cart</a>
+</div>
+
 </body>
 </html>
