Finished forgot-password, home, admin, checkout and confirmation page

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -42,7 +42,7 @@
             <span>Total:</span>
             <span id="summary-total">— €</span>
         </div>
-        <button class="pay-btn">Pay now</button>
+        <a href="checkout.html" class="pay-btn">Pay now</a>
         </aside>
     </main>
 
