--- a/pages/login.html
+++ b/pages/login.html
@@ -34,7 +34,7 @@
             </form>
 
             <div class="login-actions">
-                <a href="#">Forgot your password?</a>
+                <a href="forgot-password.html">Forgot your password?</a>
                 <a href="user-registration.html">Sign up</a>
             </div>
         </div>
