--- a/pages/user-registration.html
+++ b/pages/user-registration.html
@@ -43,7 +43,7 @@
 
                     <label for="name">First Name</label>
                     <br>
-                    <input name="name "type="text" id="FirstName">
+                    <input name="first_name"type="text" id="FirstName">
                     <span class="error" id="FirstName_error"></span>
     
                 </div>
@@ -52,7 +52,7 @@
 
                     <label for="name">Last Name</label>
                     <br>
-                    <input name="name "type="text" id="LastName">
+                    <input name="last_name "type="text" id="LastName">
                     <span class="error" id="LastName_error"></span>
     
                 </div>
