Keep upmost per comment

--- a/pages/about.html
+++ b/pages/about.html
@@ -71,7 +71,7 @@
           Our commitment is to provide you with the highest quality products that is worth your time and hard earned money.
           All products are handpicked and selected from the best of the best and thoroughly tested and reviewed by elite 
           coaches and players to assure the upmost quality is provided to our customers. High quality, safe, and efficient.
-          Our goal is to make sure that you or your players have the tools required to carve out a vicotry and strike that goal
+          Our goal is to make sure that you or your players have the tools required to carve out a victory and strike that goal
           that was always destined for you. If we can't do it, no one can.
         </p>
         
